EHEALTH-7256 Inconsistency in handling patient ID